--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "@symfony/stimulus-bridge": "^1.1.0",
         "@symfony/webpack-encore": "^0.32.1",
         "core-js": "^3.0.0",
+        "css-loader": "^5.0.1",
         "regenerator-runtime": "^0.13.2",
         "stimulus": "^2.0.0",
         "webpack-notifier": "^1.6.0"
