--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "bootstrap": "^4.5.3",
         "react": "^17.0.1",
         "react-dom": "^17.0.1"
     }
